# HDF5Plugin-Zstandard

./: CMakeLists.txt  zstd_h5filter.c  zstd_h5filter.h  zstd_h5plugin.c
